Fix centering in vertical mode on iOS.

--- a/gh-pages/gh-pages.styl
+++ b/gh-pages/gh-pages.styl
@@ -64,6 +64,9 @@ body {
 		&_vertical {
 			display: block;
 		}
+		.social-likes_vertical .social-likes__widget {
+			margin-side: auto;
+		}
 	}
 }
 
